Added and fixed stuff

--- a/404.html
+++ b/404.html
@@ -13,15 +13,17 @@
     </style>
     <head>
         <title>404 Error</title>
-        <link rel="shortcut icon" type = "image/link" href="./question.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <center>
+            <br>
+            <br>
             <h1>404 Error - Page Not Found</h1>
-            <hr>
-            <h3>Page Not Found!</h3>
-            <p>The page you requested to view was not found!</p>
+            <h3>The page you requested to view was not found.</h3>
+            <h3>If you believe this to be an error, please contact Depth via <a href="https://discord.gg/bHqwhVm" target="_blank">Discord.</a></h3>
+            <br>
+            <h3>Otherwise, you can return to the front page of the website.</h3>
             <br>
             <button onclick="window.location.href='./index.html'"">Go Home</button>
         </center>
