--- a/special-resources/access.html
+++ b/special-resources/access.html
@@ -44,6 +44,8 @@
             <label>- </label><a href="./audio.html?file=world_of_gray">World of Gray</a>
             <p></p>
             <label>- </label><a href="./audio.html?file=rosepetalv1">Rosepetal (early version)</a>
+            <p></p>
+            <label>- </label><a href="./audio.html?file=rand_menu">Random Menu Song</a>
         </div>
         <div class="floppa">
             <h3 style="color:rgb(233, 54, 54)">Big Floppa</h3>
@@ -51,23 +53,20 @@
         </div>
         <div class="updates">
             <h3 style="color:rgb(86, 255, 199)">Updates on Things</h3>
-            <p>Why hello there! This is where I
-                <br>will be posting all of my updates,
-                <br> mainly for this website.
+            <p>Hey there mi amigos, I just wanted
+                <br>to quickly update you guys on
+                <br>what's going on. 
                 <br>
-                <br>This will be updated every so often,
-                <br>and there isn't really a log
-                <br>so it's not permanent.
+                <br>At the moment I'm kind of just
+                <br>making music whenever I feel like
+                <br>it, but I'm also currently
+                <br>looking for someone to make music
+                <br>for, as it would be so cool to see
+                <br>my music actually being used!
                 <br>
-                <br>Regardless I might begin working on
-                <br>some new songs soon, so that is
-                <br>some news I guess. They could become
-                <br>an album or just stay here. It
-                <br>depends on the quality of the songs.
-                <br>
-                <br>
-                <br>Regardless, thanks for reading, and
-                <br>enjoy the rest of your day!
+                <br>If you are reading this and need
+                <br>music for anything, let me know via
+                <br>Discord. Other than that, cya!
                 <br>
                 <br>-Depth
         </p>
