--- a/special-resources/audio.html
+++ b/special-resources/audio.html
@@ -54,6 +54,10 @@
                     document.getElementById("title").textContent = "Song: Rosepetal (early ver)"
                     document.getElementById("audio").src = "./files/Rosepetal.ogg"
                     break;
+                case "rand_menu":
+                    document.getElementById("title").textContent = "8bit Menu Song"
+                    document.getElementById("audio").src = "./files/Random Song.ogg"
+                    break;
                 default:
                     document.getElementById("title").textContent = "File not found!"
                     break;
