--- a/update-log.html
+++ b/update-log.html
@@ -32,6 +32,11 @@
     </body>
     <div style="float:left;" class="updates">
         <h3 style="font-size:40px;">UPDATES</h3>
+        <p><u>11-23-21</u>
+            <br>- Updated Special Resources
+            <br>- Updated 404 Page
+            <br>- Removed Vods Channel from Front Page
+        </p>
         <p><u>11-16-21</u>
             <br>- Added this page
             <br>- Added metadata
