--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="info">
         <div class="links">
             <h3 style="text-align: left; color:red">youtube stuff</h3>
-            <a href="https://www.youtube.com/channel/UC58FHcNqdcPLK4KBPuEF-SA" target="_blank">music channel</a>
+            <a href="https://youtube.com/channel/UCdHeEsK3ogtRv4_IzaaX4PQ" target="_blank">music channel</a>
             <p></p>
             <a href="https://www.youtube.com/c/misterdepth" target="_blank">gaming channel</a>
         <br>
