--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <br>
         <br>
             <h3 style="text-align: left; color:cyan">my twitter</h3>
-            <a href="https://www.twitter.com/depthmakesstuff" target="_blank">follow me here</a>
+            <a href="https://www.twitter.com/depthecho" target="_blank">follow me here</a>
         <br>
         <br>
             <h3 style="text-align: left; color:rgb(255, 153, 0)">soundcloud</h3>
