--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <a href="https://www.twitter.com/depthecho" target="_blank">follow me here</a>
         <br>
         <br>
-            <h3 style="text-align: left; color:rgb(255, 153, 0)">soundcloud</h3>
-            <a href="https://www.soundcloud.com/depthmakesmusic" target="_blank">check out my soundcloud for music</a>
+            <h3 style="text-align: left; color:blueviolet">bandcamp</h3>
+            <a href="https://depthecho.bandcamp.com" target="_blank">check out my bandcamp for some cool stuff</a>
         </div>
         <div class="otherstuff">
             <h3 style="color:rgb(0, 255, 0)">yo dawg who are you</h3>
