--- a/files/slime-project.html
+++ b/files/slime-project.html
@@ -42,8 +42,8 @@
                 <p>Composer: Aurora</p>
                 <p>Arranger: DepthEcho</p>
                 <label>- </label><a href="./technicality%20mix.wav">TECHNICALITY</a>
-                <p>Original Composer: Aurora</p>
-                <p>Cover Composer: DepthEcho</p>
+                <p>Composer: Aurora</p>
+                <p>Arranger: DepthEcho</p>
                 <label>- </label><a href="">UNNAMED JUNGLE SONG COMING SOON</a>
                 <p>Composer: DepthEcho</p>
             </div>
