--- a/files/slime-project.html
+++ b/files/slime-project.html
@@ -44,6 +44,8 @@
                 <label>- </label><a href="./technicality%20mix.wav">TECHNICALITY</a>
                 <p>Composer: Aurora</p>
                 <p>Arranger: DepthEcho</p>
+                <label>- </label><a href="./menu%20song.wav">The Visitor (menu song)</a>
+                <p>Composer: DepthEcho</p>
                 <label>- </label><a href="">UNNAMED JUNGLE SONG COMING SOON</a>
                 <p>Composer: DepthEcho</p>
             </div>
