--- a/files/slime-project.html
+++ b/files/slime-project.html
@@ -38,7 +38,7 @@
         <div class="data">
             <div class="music">
                 <h3>All Music Files Uploaded Here:</h3>
-                <label>- </label><a href="./battle_against_whatever.wav">Nexus Termination (final boss)</a>
+                <label>- </label><a href="./battle_against_whatever.wav">Inorexable Chaos (final boss)</a>
                 <p>Composer: Aurora</p>
                 <p>Arranger: DepthEcho</p>
                 <label>- </label><a href="./technicality%20mix.wav">TECHNICALITY</a>
