--- a/files/slime-project.html
+++ b/files/slime-project.html
@@ -46,7 +46,7 @@
                 <p>Arranger: DepthEcho</p>
                 <label>- </label><a href="./menu%20song.wav">The Visitor (menu song)</a>
                 <p>Composer: DepthEcho</p>
-                <label>- </label><a href="">UNNAMED JUNGLE SONG COMING SOON</a>
+                <label>- </label><a href="./mus_adventure.wav">Slimewalk</a>
                 <p>Composer: DepthEcho</p>
             </div>
         </div>
