--- a/files/slime-project.html
+++ b/files/slime-project.html
@@ -41,12 +41,14 @@
                 <label>- </label><a href="./battle_against_whatever.wav">Inorexable Chaos (final boss)</a>
                 <p>Composer: Aurora</p>
                 <p>Arranger: DepthEcho</p>
-                <label>- </label><a href="./technicality%20mix.wav">TECHNICALITY</a>
+                <label>- </label><a href="./technicality%20mix.wav">TECHNICALITY (tech boss)</a>
                 <p>Composer: Aurora</p>
                 <p>Arranger: DepthEcho</p>
                 <label>- </label><a href="./menu%20song.wav">The Visitor (menu song)</a>
                 <p>Composer: DepthEcho</p>
-                <label>- </label><a href="./mus_adventure.wav">Slimewalk</a>
+                <label>- </label><a href="./mus_adventure.wav">Slimewalk (adventure song)</a>
+                <p>Composer: DepthEcho</p>
+                <label>- </label><a href="">Runeslime (main game theme) <strong>[NOT OUT YET]</strong></a>
                 <p>Composer: DepthEcho</p>
             </div>
         </div>
