--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
             <br>
             <h1>404 Error - Page Not Found</h1>
             <h3>The page you requested to view was not found.</h3>
-            <h3>If you believe this to be an error, please contact Depth via <a href="https://discord.gg/bHqwhVm" target="_blank">Discord.</a></h3>
+            <h3>If you believe this to be an error, please contact Depth via the email <a href="./contact.html" target="_blank">here</a>.</h3>
             <br>
             <h3>Otherwise, you can return to the front page of the website.</h3>
             <br>
