--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Depth</title>
+        <title>DepthEcho</title>
         <link rel="icon" href="./files/logo.png">
         <!--So this is the discord info stuff so like try and ignore it lmao i copied it from
         stack overflow lol-->
@@ -65,6 +65,6 @@
             </p>
         </div>
     </div>
-    <h4 style="font-size:23px;">ill probably update this sometime soon but until then see you later</h3>
+    <h4 style="font-size:23px;">want to contact me? click <a style="font-size:23px;" href="./contact.html">here</a>.</h3>
     </body>
 </html>
