--- a/files/slime-project.html
+++ b/files/slime-project.html
@@ -1,56 +1,5 @@
 <html>
-    <head>
-        <title>The Slime Project</title>
-        <link rel="icon" href="./logo.png">
-        <!--So this is the discord info stuff so like try and ignore it lmao i copied it from
-        stack overflow lol-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta property="og:title" content="Aurora's Slime Project" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://depth-dev.github.io"/>
-        <meta property="og:description" content="a project that i want to keep track of here" />
-        <meta name="theme-color" content="#009dff">
-    
-    </head>
-    <style type="text/css">
-        .data {
-  display: flex;
-  justify-content: space-between;
-}
-        h1 { color: rgb(255, 255, 255); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:45px}
-        h3 { color: rgb(255, 255, 255); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:30px}
-        h4 { color: rgb(255, 255, 255); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:25px}
-        p { color: rgb(255, 255, 255); font-family: Arial, Helvetica, sans-serif; font-size:18px}
-        a { color: rgb(20, 207, 104); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:18px}
-        body {
-            background-color:rgb(0, 0, 0);
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-        }
-        label { color: rgb(255, 255, 255); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:18px}
-    </style>
-    <body>
-        <h1 style="font-size:100px;">AURORA'S SLIME PROJECT</h1>
-        <br>
-        <br>
-        <div class="data">
-            <div class="music">
-                <h3>All Music Files Uploaded Here:</h3>
-                <label>- </label><a href="./battle_against_whatever.wav">Inorexable Chaos (final boss)</a>
-                <p>Composer: Aurora</p>
-                <p>Arranger: DepthEcho</p>
-                <label>- </label><a href="./technicality%20mix.wav">TECHNICALITY (tech boss)</a>
-                <p>Composer: Aurora</p>
-                <p>Arranger: DepthEcho</p>
-                <label>- </label><a href="./menu%20song.wav">The Visitor (menu song)</a>
-                <p>Composer: DepthEcho</p>
-                <label>- </label><a href="./mus_adventure.wav">Slimewalk (adventure song)</a>
-                <p>Composer: DepthEcho</p>
-                <label>- </label><a href="">Runeslime (main game theme) <strong>[NOT OUT YET]</strong></a>
-                <p>Composer: DepthEcho</p>
-            </div>
-        </div>
-    </body>
+    <script>
+        window.location.href="../runeslime"
+    </script>
 </html>
