--- a/runeslime/index.html
+++ b/runeslime/index.html
@@ -32,16 +32,17 @@
         label { color: rgb(255, 255, 255); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:18px}
     </style>
     <body>
+        <p></p>
         <h1 style="font-size:80px;">RUNESLIME MUSIC RESOURCES</h1>
-        <br>
+        <center><p>All the resources found here are for the game <i>Runeslime</i>. The game is currently unreleased.</p></center>
         <div class="data">
             <div class="music">
                 <h3>All Music Files Uploaded Here:</h3>
                 <label>- </label><a href="../files/battle_against_whatever.wav">Inorexable Chaos (final boss)</a>
-                <p>Composer: Aurora</p>
+                <p>Composer: Elara</p>
                 <p>Arranger: DepthEcho</p>
                 <label>- </label><a href="../files/technicality%20mix.wav">TECHNICALITY (tech boss)</a>
-                <p>Composer: Aurora</p>
+                <p>Composer: Elara</p>
                 <p>Arranger: DepthEcho</p>
                 <label>- </label><a href="../files/menu%20song.wav">The Visitor (menu song)</a>
                 <p>Composer: DepthEcho</p>
