--- a/runeslime/index.html
+++ b/runeslime/index.html
@@ -48,6 +48,8 @@
                 <p>Composer: DepthEcho</p>
                 <label>- </label><a href="../files/mus_adventure.wav">Slimewalk (adventure song)</a>
                 <p>Composer: DepthEcho</p>
+                <label>- </label><a href="../files/big_boss_theme.wav">Metal Rip (other boss theme)</a>
+                <p>Composer: DepthEcho</p>
                 <label>- </label><a href="">Runeslime (main game theme) <strong>[NOT OUT YET]</strong></a>
                 <p>Composer: DepthEcho</p>
             </div>
