--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h3 style="text-align: left; color:red">youtube stuff</h3>
             <a href="https://youtube.com/channel/UCdHeEsK3ogtRv4_IzaaX4PQ" target="_blank">music channel</a>
             <p></p>
-            <a href="https://www.youtube.com/c/misterdepth" target="_blank">gaming channel</a>
+            <a href="https://www.youtube.com/channel/UCauBfDGf1xlMaJW10U8DRzA" target="_blank">gaming channel</a>
         <br>
         <br>
             <h3 style="text-align: left; color:cyan">my twitter</h3>
