--- a/index.html
+++ b/index.html
@@ -58,10 +58,6 @@
     <body>
         <a style="color:rgb(61, 61, 61); position:absolute; right:10;" href="./special-resources/" target="_blank">special resources</a>
         <br>
-        <div class="alert">
-            <span  class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-            <strong>Check out some of my recent work on <a href="./runeslime/">RUNESLIME</a>!</strong>
-          </div>
         <h1>welcome</h1>
         <h3>here you can find all of my things</h3>
         <div class="info">
@@ -76,8 +72,12 @@
             <a href="https://www.twitter.com/depthecho" target="_blank">follow me here</a>
         <br>
         <br>
-            <h3 style="text-align: left; color:blueviolet">bandcamp</h3>
+            <h3 style="text-align: left; color:rgb(129, 255, 196)">bandcamp</h3>
             <a href="https://depthecho.bandcamp.com" target="_blank">check out my bandcamp for some cool stuff</a>
+            <br>
+            <br>
+                <h3 style="text-align: left; color:blueviolet">discord</h3>
+                <a href="https://discord.gg/e6cHcpaEgp" target="_blank">join the discord</a>
         </div>
         <div class="otherstuff">
             <h3 style="color:rgb(0, 255, 0)">yo dawg who are you</h3>
